// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update Cypress Config Properties should add a property 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    blah: 'i am a top level property',
    baseUrl: 'http://localhost:1234',
    component: {
        fixturesFolder: 'cypress/fixtures/cool',
        devServer: componentDevServer('tsconfig.spec.json', 'swc'),
        blah: 'i am a random property',
        pluginsFile: false,
        video: true,
        chromeWebSecurity: false,
        specPattern: '**/*.cy.{js,jsx,ts,tsx}',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        video: false,
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        pluginsFile: false,
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos',
        screenshotsFolder: '../../dist/cypress/apps/myapp4299814-e2e/screenshots',
        chromeWebSecurity: false
    }
});
"
`;

exports[`Update Cypress Config Properties should add and update existing properties 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    blah: 'i am a top level property',
    baseUrl: 'http://localhost:1234',
    component: {
        fixturesFolder: 'cypress/fixtures/cool',
        devServer: componentDevServer('tsconfig.spec.json', 'swc'),
        blah: 'i am a random property',
        pluginsFile: false,
        video: true,
        chromeWebSecurity: false,
        specPattern: '**/*.cy.{js,jsx,ts,tsx}',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        video: false,
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        pluginsFile: false,
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos',
        screenshotsFolder: '../../dist/cypress/apps/myapp4299814-e2e/screenshots',
        chromeWebSecurity: false
    }
});
"
`;

exports[`Update Cypress Config Properties should overwrite existing config 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    baseUrl: 'http://overwrite:8080',
    component: {
        devServer: componentDevServer('tsconfig.spec.json', 'swc')
    },
    e2e: {
        video: false
    }
});
"
`;

exports[`Update Cypress Config Properties should remove a property 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    component: {
        chromeWebSecurity: false,
        fixturesFolder: 'cypress/fixtures',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        pluginsFile: false,
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos'
    }
});
"
`;

exports[`Update Cypress Config Properties should remove properties 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    component: {
        chromeWebSecurity: false,
        fixturesFolder: 'cypress/fixtures',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        pluginsFile: false,
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos'
    }
});
"
`;
